fix: the problem of overlapping home page titles

--- a/src/scripts/style.css
+++ b/src/scripts/style.css
@@ -421,7 +421,7 @@ body.has-js {
 
 .index h1 {
   font-size: 75px;
-  line-height: 40px;
+  line-height: 75px;
 }
 
 .index blockquote {
